# Smart-Agent-Ledger

./: .dockerignore  .gitignore  Dockerfile  NOTICE  OPEN_SOURCE_READINESS.md  README.md  README.zh-CN.md  SECURITY.md  TESTING.md  agent_collectors.py  agent_ledger.py  agent_ledger_server.py  cli.py  collector_utils.py  docker-compose.yml  eslint.config.js  feishu_notifier.py  fleet_ledger.py  gateway.py  keys.env.example  package.json  project_attribution.py  pyproject.toml  requirements.txt  run.sh  subscription_ledger.py  usage_report.py  utils.py
data/: company-agent-nodes.example.json  feishu-reminder.example.json  model-pricing.json  model-subscriptions.example.json  project-aliases.example.json  routing-keywords.json
deploy/: bootstrap-collector-node.sh  com.smart-agent-ledger.agent-ledger.plist.example  install-agent-ledger-readonly-launchd.sh  onboard-collector-node.sh
static/: dashboard.css  dashboard.html  dashboard.js
tests/: conftest.py  test_agent_ledger_server.py  test_aggregation.py  test_auth.py  test_collector_utils.py  test_config_api.py  test_feishu_notifier.py  test_fleet_ledger.py  test_n8n_usage_events.py  test_pricing.py  test_query_sessions.py  test_routing.py  test_subscription.py  test_usage_report.py  test_utils.py
