[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-agent-ledger"
version = "1.0.0"
description = "Local-first AI agent usage ledger with optional lightweight gateway"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "ChuluuMGL"},
]
keywords = ["ai-agents", "usage-ledger", "token-tracking", "local-first", "cost-tracking", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
smart-agent-ledger = "cli:main"

[tool.setuptools]
py-modules = ["gateway", "agent_ledger", "agent_ledger_server", "fleet_ledger", "subscription_ledger", "feishu_notifier", "cli", "utils"]

[tool.setuptools.package-data]
"*" = ["static/*.html", "static/*.css", "static/*.js", "data/*.example.json", "data/routing-keywords.json", "data/model-pricing.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
